# nove

./: .env.example  .gitignore  API.md  BRAND.md  CLAUDE.md  PROTOTYPE_OVERVIEW.md  Podfile  Procfile  README.md  SETUP.md  STYLIST_V2_OVERVIEW.md  demo_complete.py  ecosystem.config.cjs  lynx.config.ts  package-lock.json  package.json  pnpm-lock.yaml  quick_demo.py  requirements.txt  rsbuild.config.ts  run.py  tailwind.config.ts  test_server.py  tsconfig.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml
backend/keys/: AuthKey.p8
backend/measurement/: README.md  convert_smpl.py  download_smpl.py  pyproject.toml  test_measurement.py
backend/scripts/: batch_sam3d.py  calculate_mesh_angle.py  evaluate_measurements.py  ik_solver.py  init.sql  inspect_anny_coords.py  load_sam3d_joints.py  load_sam3d_keypoints.py  pose_adjuster.py  sam3d_to_anny.py  test_anny_fitting.py  test_arm_raised.py  test_dancer_pose.py  test_leg_forward.py  test_pelvis_tilt.py  test_pelvis_zero.py  test_right_leg.py  test_tree_pose.py
backend/src/: __init__.py  config.py  main.py
backend/tests/: test_services.py
backend/tree_pose_combined/: v001_px-15_py45_pz20_uz25_lx115_fz-30.ply  v002_px-15_py45_pz20_uz25_lx115_fz-15.ply  v003_px-15_py45_pz20_uz25_lx115_fz0.ply  v004_px-15_py45_pz20_uz25_lx115_fz15.ply  v005_px-15_py45_pz20_uz25_lx115_fz30.ply  v006_px-15_py45_pz20_uz25_lx120_fz-30.ply  v007_px-15_py45_pz20_uz25_lx120_fz-15.ply  v008_px-15_py45_pz20_uz25_lx120_fz0.ply  v009_px-15_py45_pz20_uz25_lx120_fz15.ply  v010_px-15_py45_pz20_uz25_lx120_fz30.ply  v011_px-15_py45_pz20_uz25_lx125_fz-30.ply  v012_px-15_py45_pz20_uz25_lx125_fz-15.ply  v013_px-15_py45_pz20_uz25_lx125_fz0.ply  v014_px-15_py45_pz20_uz25_lx125_fz15.ply  v015_px-15_py45_pz20_uz25_lx125_fz30.ply  v016_px-15_py45_pz20_uz25_lx130_fz-30.ply  v017_px-15_py45_pz20_uz25_lx130_fz-15.ply  v018_px-15_py45_pz20_uz25_lx130_fz0.ply  v019_px-15_py45_pz20_uz25_lx130_fz15.ply  v020_px-15_py45_pz20_uz25_lx130_fz30.ply  v021_px-15_py45_pz20_uz30_lx115_fz-30.ply  v022_px-15_py45_pz20_uz30_lx115_fz-15.ply  v023_px-15_py45_pz20_uz30_lx115_fz0.ply  v024_px-15_py45_pz20_uz30_lx115_fz15.ply  v025_px-15_py45_pz20_uz30_lx115_fz30.ply  v026_px-15_py45_pz20_uz30_lx120_fz-30.ply  v027_px-15_py45_pz20_uz30_lx120_fz-15.ply  v028_px-15_py45_pz20_uz30_lx120_fz0.ply  v029_px-15_py45_pz20_uz30_lx120_fz15.ply  v030_px-15_py45_pz20_uz30_lx120_fz30.ply  v031_px-15_py45_pz20_uz30_lx125_fz-30.ply  v032_px-15_py45_pz20_uz30_lx125_fz-15.ply  v033_px-15_py45_pz20_uz30_lx125_fz0.ply  v034_px-15_py45_pz20_uz30_lx125_fz15.ply  v035_px-15_py45_pz20_uz30_lx125_fz30.ply  (+1045 more)
landing/: index.html  (+3 more)
(+91 files in other folders)
