[project]
name = "novia-backend"
version = "0.1.0"
description = "Novia - AI-powered wedding dress recommendation and body analysis service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "boto3>=1.35.0",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.17",
    "anthropic>=0.40.0",
    "trimesh>=4.5.0",
    "scipy>=1.16.3",
    "fal-client>=0.10.0",
    "pandas>=2.3.3",
    "rtree>=1.4.1",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
]
cpu = [
    "torch>=2.5.0",
]
anny = [
    "anny @ file:///Users/jonathan/projects/anny",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a5",
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ty]
python-version = "3.11"

[tool.ty.rules]
possibly-unbound-attribute = "error"
invalid-return-type = "error"
missing-argument = "error"
too-many-positional-arguments = "error"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ASYNC",  # flake8-async
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
